--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -16,4 +16,8 @@
     <None Remove="RGN-images\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+  </ItemGroup>
+
 </Project>
