--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BLL\DTO.csproj" />
+  </ItemGroup>
+
 </Project>
