--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -7,7 +7,7 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
 
-    <ForceDesignerDpiUnaware>true</ForceDesignerDpiUnaware>
+	  <ApplicationHighDpiMode>SystemAware</ApplicationHighDpiMode>
   </PropertyGroup>
 
   <ItemGroup>
